Velcro test First SandBox/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Used for deal registrations</description>
        <label>Deal ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Reg__c</fullName>
        <label>Deal Reg?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <description>Used for deal registration.</description>
        <label>Deal Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Role__c</fullName>
        <description>Used for deal registration.</description>
        <label>Decision Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_Activity_Required__c</fullName>
        <label>Dev Activity Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhesive</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>Cost Imp</fullName>
                </value>
                <value>
                    <fullName>DCS</fullName>
                </value>
                <value>
                    <fullName>Fabrication</fullName>
                </value>
                <value>
                    <fullName>Flex Zone</fullName>
                </value>
                <value>
                    <fullName>Flex Zone or Islands</fullName>
                </value>
                <value>
                    <fullName>HTH/Mesh</fullName>
                </value>
                <value>
                    <fullName>Improved Edge</fullName>
                </value>
                <value>
                    <fullName>Laminate</fullName>
                </value>
                <value>
                    <fullName>Material Source</fullName>
                </value>
                <value>
                    <fullName>New Loop</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Pkg Change</fullName>
                </value>
                <value>
                    <fullName>Slit Width</fullName>
                </value>
                <value>
                    <fullName>Soft</fullName>
                </value>
                <value>
                    <fullName>Tape</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developing_Amount__c</fullName>
        <formula>If( ISPICKVAL(StageName, &quot;Developing&quot;),CASE( text(CurrencyIsoCode) , &quot;USD&quot;, Amount , &quot;CAD&quot;, Amount / value(&quot;.943400&quot;),&quot;BRL&quot;, Amount / value(&quot;0.434800&quot;),&quot;MXN&quot;, Amount / value(&quot;0.078700&quot;),0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Request_ID__c</fullName>
        <formula>CASE(RecordType.DeveloperName ,&quot;SPD_Request&quot;, &quot;DR&quot; + RIGHT(Id,6) + &quot;-&quot; + Owner.Alias, &quot;AED_NPI_Request&quot;, &quot;DR&quot; + RIGHT(Id,6) + &quot;-&quot; + Owner.Alias,Null)</formula>
        <label>Development Request ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Sales_Request__c</fullName>
        <label>Direct Sales Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved By Sales</fullName>
                </value>
                <value>
                    <fullName>Approved By Sales and Credit</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected by Credit</fullName>
                </value>
                <value>
                    <fullName>Rejected By Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>Used for deal registration.</description>
        <label>Distributor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dollars2__c</fullName>
        <description>Unique Special Customer Requirements?</description>
        <label>Dollars (Unique Req)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollars_Raw_Mat__c</fullName>
        <description>AED Cost Estimator - Unique Raw Materials</description>
        <label>Dollars (Raw Materials)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollars_Testing_Req__c</fullName>
        <description>AED Cost Estimator -Is testing required</description>
        <label>Dollars (Testing Req)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollars__c</fullName>
        <description>Cost Estimator for AED NPI request</description>
        <label>Dollars (Level of Diff)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMEA_Approver_Region__c</fullName>
        <label>EMEA_Approver_Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_SBU_Manager__c</fullName>
        <formula>CASE( Account_SBU__c , &quot;Construction&quot;, &quot;fbilla@velcro.com&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMEA SBU Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Project_Manager__c</fullName>
        <description>Used for field update to Project Manager Email</description>
        <formula>DR_Project_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering__c</fullName>
        <label>Engineering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Est_Volume_in_Units__c</fullName>
        <label>Est. Volume in Units</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Development_Dollars__c</fullName>
        <formula>Dollars__c +  Dollars_Raw_Mat__c +  Dollars_Testing_Req__c +  Dollars2__c +  Travel_Costs_to_Support_Development__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Development Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Development_Hours__c</fullName>
        <formula>Hours__c +  Hours_Testing_Req__c +  Hours2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Development Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Initial_Purchase_Amount__c</fullName>
        <label>Estimated Initial Purchase Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Months_APAC__c</fullName>
        <label>**预计商机持续月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Season_APAC__c</fullName>
        <formula>text(Year(addMonths(datevalue(CreatedDate), Estimated_Months_APAC__c )))
+&apos;-Q&apos;+text(CEILING( MONTH (addMonths(datevalue(CreatedDate), Estimated_Months_APAC__c ) )/ 3 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>**预计商机关闭季度</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Business_FullYear__c</fullName>
        <inlineHelpText>How much of this DR is existing Business for a 12 month period</inlineHelpText>
        <label>Existing Business Full Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Budget__c</fullName>
        <description>EMEA-only field</description>
        <label>FY Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Firm_Quote__c</fullName>
        <inlineHelpText>When does the customer need a firm Quote? (adds 7 days to AED Date approx.)</inlineHelpText>
        <label>Firm Quote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focused_Product_APAC__c</fullName>
        <inlineHelpText>Using &quot;Ctrl+F&quot; to search</inlineHelpText>
        <label>Focused Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AUTO LOOP</fullName>
                </value>
                <value>
                    <fullName>DCS</fullName>
                </value>
                <value>
                    <fullName>DCS Cucurbit</fullName>
                </value>
                <value>
                    <fullName>FLEX MIGG</fullName>
                </value>
                <value>
                    <fullName>FLEX-MIGG</fullName>
                </value>
                <value>
                    <fullName>HEADGEAR</fullName>
                </value>
                <value>
                    <fullName>HF3</fullName>
                </value>
                <value>
                    <fullName>HI GARDE HOOK</fullName>
                </value>
                <value>
                    <fullName>HI GARDE LOOP</fullName>
                </value>
                <value>
                    <fullName>HOOK65</fullName>
                </value>
                <value>
                    <fullName>HOOK67</fullName>
                </value>
                <value>
                    <fullName>HOOK70</fullName>
                </value>
                <value>
                    <fullName>HOOK80</fullName>
                </value>
                <value>
                    <fullName>HOOK81</fullName>
                </value>
                <value>
                    <fullName>HOOK88</fullName>
                </value>
                <value>
                    <fullName>HOOK88 FR</fullName>
                </value>
                <value>
                    <fullName>HTH09A</fullName>
                </value>
                <value>
                    <fullName>HTH10A</fullName>
                </value>
                <value>
                    <fullName>HTH12A</fullName>
                </value>
                <value>
                    <fullName>HTH13A</fullName>
                </value>
                <value>
                    <fullName>HTH15A</fullName>
                </value>
                <value>
                    <fullName>HTH511</fullName>
                </value>
                <value>
                    <fullName>HTH536</fullName>
                </value>
                <value>
                    <fullName>HTH584</fullName>
                </value>
                <value>
                    <fullName>HTH594</fullName>
                </value>
                <value>
                    <fullName>HTH705</fullName>
                </value>
                <value>
                    <fullName>HTH722</fullName>
                </value>
                <value>
                    <fullName>HTH731</fullName>
                </value>
                <value>
                    <fullName>HTH732</fullName>
                </value>
                <value>
                    <fullName>HTH745</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forwarded_Lead_ID__c</fullName>
        <description>The field is updated with a lead id when the opportunity details are forwarded to a partner as a lead.</description>
        <label>Forwarded Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Additional_Orders__c</fullName>
        <label>Frequency of Additional Orders?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Converted_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Converted Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTM_Strategy__c</fullName>
        <label>GTM Strategy (New Account)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Gross Margin of the opportunity</description>
        <inlineHelpText>Gross Margin of the opportunity</inlineHelpText>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hook__c</fullName>
        <inlineHelpText>If it Applies. If not , add &quot;N/A&quot;</inlineHelpText>
        <label>Hook</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Horizon_of_the_Project__c</fullName>
        <description>EMEA-only field</description>
        <inlineHelpText>What is the Horizon of the project? H1 - Short  / H2- Mid / H3- Long Term</inlineHelpText>
        <label>Horizon of the Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>H1</fullName>
                </value>
                <value>
                    <fullName>H2</fullName>
                </value>
                <value>
                    <fullName>H3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours2__c</fullName>
        <description>Unique Special Customer Requirements?</description>
        <label>Hours (Unique Req)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Testing_Req__c</fullName>
        <description>AED Cost Estimator -Is testing Required?</description>
        <label>Hours (Testing Req)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>For AED Request Cost Estimator</description>
        <label>Hours (Level of Diff)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITC_APAC__c</fullName>
        <inlineHelpText>Filled by Dennis Zhang to decide if need approval of Velcro America</inlineHelpText>
        <label>ITC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>基于中国</fullName>
                </value>
                <value>
                    <fullName>基于美国</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITC_Project_Notes__c</fullName>
        <label>ITC Project Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incremental_Sales_Cannibalisation__c</fullName>
        <description>EMEA-only field: before july 2018 it was : (Expected Revenue - FY Budget )</description>
        <formula>Realistic_Sales_CY__c -  FY_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Realistic Sales CY  -  FY Budget</inlineHelpText>
        <label>Incremental Sales/Cannibalisation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_or_Erosion_Dollars__c</fullName>
        <inlineHelpText>What is the Incremental or erosion value of this project for a full calendar year?</inlineHelpText>
        <label>Incremental or Erosion Dollars</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_email__c</fullName>
        <description>Internal email address of originator</description>
        <label>Internal email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intial_Estimated_Close_Date__c</fullName>
        <description>Used for deal registration.</description>
        <label>Initial Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverse_Close_Date__c</fullName>
        <formula>CloseDate -  CDF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverse Close Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCustomer_APAC__c</fullName>
        <formula>if(contains(Account.RecordType.DeveloperName,&apos;Non_Customer&apos;), $Label.New_Customer , $Label.Old_Customer )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>是否老客户</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsVelcroPointed_APAC__c</fullName>
        <label>是否指定Velcro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_This_a_Development_Request__c</fullName>
        <defaultValue>&quot;If this Opportunity is to initiate a Development Request - be sure to complete the 3 Qualifying Questions in the Development Request Qualification section.&quot;</defaultValue>
        <label>Is This a Development Request?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_this_an_on_going_project__c</fullName>
        <inlineHelpText>Is this more than a one time purchase?</inlineHelpText>
        <label>Is this an on-going project?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Number_If_Known__c</fullName>
        <label>Item Number (If Known)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyTechs_APAC__c</fullName>
        <label>关键技术及性能要求</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Customer__c</fullName>
        <label>Key Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Milestone_1__c</fullName>
        <description>EMEA-only field</description>
        <label>Key Milestone 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Milestone_2__c</fullName>
        <description>EMEA-only field</description>
        <label>Key Milestone 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Milestone_3__c</fullName>
        <description>EMEA-only field</description>
        <label>Key Milestone 3</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning_APAC__c</fullName>
        <inlineHelpText>Is required when Closed Lost</inlineHelpText>
        <label>Learning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <inlineHelpText>If it Applies. If not , add &quot;N/A&quot;</inlineHelpText>
        <label>Length</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Project_Years__c</fullName>
        <label>Length of Project (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Dev_Difficulty_per_Item__c</fullName>
        <label>Level of Dev. Difficulty (per Item)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__c</fullName>
        <inlineHelpText>If it Applies. If not , add &quot;N/A&quot;</inlineHelpText>
        <label>Loop</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Business_Reason__c</fullName>
        <inlineHelpText>Select a reason this business was not won</inlineHelpText>
        <label>Why We Lost</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Performance</fullName>
                </value>
                <value>
                    <fullName>Stayed with Current Solution</fullName>
                </value>
                <value>
                    <fullName>Referred/Lost to Distributor</fullName>
                </value>
                <value>
                    <fullName>No Hook and Loop Solution</fullName>
                </value>
                <value>
                    <fullName>Project declined by Sales or Development</fullName>
                </value>
                <value>
                    <fullName>End of Program</fullName>
                </value>
                <value>
                    <fullName>Product Availability / MOQ / Delivery</fullName>
                </value>
                <value>
                    <fullName>Quote Expired</fullName>
                </value>
                <value>
                    <fullName>Quote Rejected</fullName>
                </value>
                <value>
                    <fullName>Lead Time / Minimum Order Quantity</fullName>
                </value>
                <value>
                    <fullName>Dead Opportunity / No Feedback</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Too long to quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_SC__c</fullName>
        <label>MFG &amp; SC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Roadblock__c</fullName>
        <label>Main Roadblock</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acceptance</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Lamination and Expense</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Project Stopped</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Delay</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Specs</fullName>
                </value>
                <value>
                    <fullName>Test Result Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner.Manager.LastName</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Product__c</fullName>
        <description>PC PDR</description>
        <inlineHelpText>Market Product</inlineHelpText>
        <label>Market Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Markets_Served__c</fullName>
        <label>Markets Served (New Account)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>All Markets</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Architects</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Awning</fullName>
                </value>
                <value>
                    <fullName>Bindery</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Crafters</fullName>
                </value>
                <value>
                    <fullName>Custom Fabrication</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Displays</fullName>
                </value>
                <value>
                    <fullName>Drapery</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Engineering Services</fullName>
                </value>
                <value>
                    <fullName>Exhibits</fullName>
                </value>
                <value>
                    <fullName>Fabricators</fullName>
                </value>
                <value>
                    <fullName>Fortune 500</fullName>
                </value>
                <value>
                    <fullName>Framing / Frame Stores</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Produce_Date_APAC__c</fullName>
        <label>Mass Produce Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_1_Status__c</fullName>
        <label>Milestone 1 Status</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_2_Status__c</fullName>
        <description>EMEA-only field</description>
        <label>Milestone 2 Status</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_3_Status__c</fullName>
        <description>EMEA-only field</description>
        <label>Milestone 3 Status</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Modified_now__c</fullName>
        <description>This field is set to true if Lastmodified date took place in the last  2 minutes . ( 2/1440)=(2/24*60)</description>
        <formula>LastModifiedDate &gt; NOW()- (2/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NY_TotalPercent__c</fullName>
        <formula>Q1_NY_Pct__c +  Q2_NY_Pct__c +  Q3_NY_Pct__c +  Q4_NY_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NY % Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NY_Total__c</fullName>
        <description>EMEA-only field</description>
        <formula>Q1_NY_Amount__c  +  Q2_NY_Amount__c  +  Q3_NY_Amount__c +  Q4_NY_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Q1 NY Amount + Q2 NY Amount + Q3 NY Amount + Q4 NY Amount</inlineHelpText>
        <label>NY Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Negotiating_Amount__c</fullName>
        <formula>If( ISPICKVAL(StageName, &quot;Negotiating&quot;),CASE( text(CurrencyIsoCode) , &quot;USD&quot;, Amount , &quot;CAD&quot;, Amount / value(&quot;.943400&quot;),&quot;BRL&quot;, Amount / value(&quot;0.434800&quot;),&quot;MXN&quot;, Amount / value(&quot;0.078700&quot;),0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negotiating Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Disclosure_Agreement_Required__c</fullName>
        <label>Non-Disclosure Agreement Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note_APAC__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
</CustomObject>